исправил ошибки валидности

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body class="page">
     <header class="block header">
       <div class="header__block">
-        <h1 class="header__title">&lt/html&gt</h1>
+        <h1 class="header__title">&lt;/html&gt;</h1>
         <p class="header__text">закрывающий тег</p>
       </div>
     </header>
@@ -29,7 +29,7 @@
           <span class="img__label">поехали!!!</span>
           <img
             class="card__img img__go"
-            src="./images/image.png"
+            src="./images/go.jpg"
             alt="фудтрак"
           />
         </div>
@@ -96,7 +96,7 @@
           <span class="img__label">Первый блин...</span>
           <img
             class="card__img img__fear"
-            src="./images/image (2).png"
+            src="./images/chisti__list.jpg"
             alt="фудтрак"
           />
         </div>
@@ -164,7 +164,7 @@
           <span class="img__label">я смогу</span>
           <img
             class="card__img img__i_can"
-            src="./images/image (3).png"
+            src="./images/i__can.jpg"
             alt="фудтрак"
           />
         </div>
@@ -231,7 +231,7 @@
           <span class="img__label">повторение-мать!</span>
           <img
             class="card__img img__repeat"
-            src="./images/image (4).png"
+            src="./images/repeat.jpg"
             alt="фудтрак"
           />
         </div>
@@ -301,7 +301,7 @@
           <span class="img__label">я не один</span>
           <img
             class="card__img img__together"
-            src="./images/image (5).png"
+            src="./images/together.jpg"
             alt="фудтрак"
           />
         </div>
@@ -373,7 +373,7 @@
           <span class="img__label">смотри в оба</span>
           <img
             class="card__img img__attention"
-            src="./images/image (6).png"
+            src="./images/smotri__v_oba.jpg"
             alt="фудтрак"
           />
         </div>
@@ -440,7 +440,7 @@
           <span class="img__label">просто начни</span>
           <img
             class="card__img img__work"
-            src="./images/image (7).png"
+            src="./images/prosto__nachni.jpg"
             alt="фудтрак"
           />
         </div>
@@ -510,7 +510,7 @@
           <span class="img__label">JS я иду!</span>
           <img
             class="card__img img__long_way"
-            src="./images/image (8).png"
+            src="./images/js__ya_idu.jpg"
             alt="фудтрак"
           />
         </div>
