--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <p class="header__text">закрывающий тег</p>
     </header>
     <main class="main">
-      <figure class="card">
+      <article class="card">
         <h2 class="card__title">
           Фритрек и нулевой спринт: Подготовка к работе
         </h2>
@@ -34,7 +34,7 @@
             />
           </picture>
         </div>
-        <figcaption class="card__text_block">
+        <div class="card__text_block">
           <p class="card__text">
             Это было самое начало пути. На этом этапе важно было проникнуться
             основами и настроиться на учёбу. И, возможно, подумать, как новые
@@ -45,7 +45,7 @@
             Было смешанное чувство, понимал что это решение может изменить мою
             жизнь и хотелось поскорее научиться всему.
           </p>
-        </figcaption>
+        </div>
         <div class="button__container">
           <button class="button button__heart card__icon-button" type="button">
             <svg
@@ -90,8 +90,8 @@
             <span class="button__text"> Like </span>
           </button>
         </div>
-      </figure>
-      <figure class="card">
+      </article>
+      <article class="card">
         <h2 class="card__title">1 спринт: Я — чистый лист</h2>
         <div class="img__wrapper">
           <span class="img__label">Первый блин...</span>
@@ -104,7 +104,7 @@
             />
           </picture>
         </div>
-        <figcaption class="card__text_block">
+        <div class="card__text_block">
           <p class="card__text">
             На первых этапах мы работали со страхами и сомнениями, которые часто
             испытывают новички. Один из них — страх перед чистым листом. Это,
@@ -116,7 +116,7 @@
             Да страх перед чистым листом штука серьезная, но дисциплина помогает
             с этим справиться
           </p>
-        </figcaption>
+        </div>
         <div class="button__container">
           <button class="button button__heart card__icon-button" type="button">
             <svg
@@ -161,8 +161,8 @@
             <span class="button__text"> Like </span>
           </button>
         </div>
-      </figure>
-      <figure class="card">
+      </article>
+      <article class="card">
         <h2 class="card__title">1 спринт: А если не получится?</h2>
         <div class="img__wrapper">
           <span class="img__label">я смогу</span>
@@ -175,7 +175,7 @@
             />
           </picture>
         </div>
-        <figcaption class="card__text_block">
+        <div class="card__text_block">
           <p class="card__text">
             Первый проект — позади! Но это всё ещё самое начало пути. Радость
             могла быстро померкнуть и смениться ожиданием провала. Или вы,
@@ -186,7 +186,7 @@
             Первый проект был сдан и хотелось рассказать об этом всем, понимал
             что впереди еще много работы, но чувствовал что мне все по плечу.
           </p>
-        </figcaption>
+        </div>
         <div class="button__container">
           <button class="button button__heart card__icon-button" type="button">
             <svg
@@ -231,8 +231,8 @@
             <span class="button__text"> Like </span>
           </button>
         </div>
-      </figure>
-      <figure class="card">
+      </article>
+      <article class="card">
         <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
         <div class="img__wrapper">
           <span class="img__label">повторение-мать!</span>
@@ -245,7 +245,7 @@
             />
           </picture>
         </div>
-        <figcaption class="card__text_block">
+        <div class="card__text_block">
           <p class="card__text">
             На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы
             понять, как много ещё впереди. Вы могли попытаться погнаться за
@@ -259,7 +259,7 @@
             что еще не все до конца понял и надо закрепить весь пройденный
             материал.
           </p>
-        </figcaption>
+        </div>
         <div class="button__container">
           <button class="button button__heart card__icon-button" type="button">
             <svg
@@ -304,8 +304,8 @@
             <span class="button__text"> Like </span>
           </button>
         </div>
-      </figure>
-      <figure class="card">
+      </article>
+      <article class="card">
         <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
         <div class="img__wrapper">
           <span class="img__label">я не один</span>
@@ -318,7 +318,7 @@
             />
           </picture>
         </div>
-        <figcaption class="card__text_block">
+        <div class="card__text_block">
           <p class="card__text">
             Всё это время вы были не одиноки (хотя, возможно, иногда и
             чувствовали, что одни против целого мира). Вас окружали
@@ -334,7 +334,7 @@
             с этой работой идеально. Большое спасибо всей команде сопровождения
             !!!
           </p>
-        </figcaption>
+        </div>
         <div class="button__container">
           <button class="button button__heart card__icon-button" type="button">
             <svg
@@ -379,8 +379,8 @@
             <span class="button__text"> Like </span>
           </button>
         </div>
-      </figure>
-      <figure class="card">
+      </article>
+      <article class="card">
         <h2 class="card__title">3 спринт: Обходные стратегии</h2>
         <div class="img__wrapper">
           <span class="img__label">смотри в оба</span>
@@ -393,7 +393,7 @@
             />
           </picture>
         </div>
-        <figcaption class="card__text_block">
+        <div class="card__text_block">
           <p class="card__text">
             На этом курсе вы постоянно решали разные задачи. В какой-то момент
             вам могло показаться, что решения просто иссякли. Значит, пришло
@@ -404,7 +404,7 @@
             В этот момент по-настоящему понимаешь в какой океан нырнул и как
             важно уметь и любить плавать.
           </p>
-        </figcaption>
+        </div>
         <div class="button__container">
           <button class="button button__heart card__icon-button" type="button">
             <svg
@@ -449,8 +449,8 @@
             <span class="button__text"> Like </span>
           </button>
         </div>
-      </figure>
-      <figure class="card">
+      </article>
+      <article class="card">
         <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
         <div class="img__wrapper">
           <span class="img__label">просто начни</span>
@@ -463,7 +463,7 @@
             />
           </picture>
         </div>
-        <figcaption class="card__text_block">
+        <div class="card__text_block">
           <p class="card__text">
             Во время учёбы часто возникает чувство, когда не знаешь, за что
             хвататься. Вроде и проектную пора сдавать, и задачи хочется
@@ -477,7 +477,7 @@
             перед собой цель и идти к ней, иначе рискуешь так ничего и не
             добиться.
           </p>
-        </figcaption>
+        </div>
         <div class="button__container">
           <button class="button button__heart card__icon-button" type="button">
             <svg
@@ -522,8 +522,8 @@
             <span class="button__text"> Like </span>
           </button>
         </div>
-      </figure>
-      <figure class="card">
+      </article>
+      <article class="card">
         <h2 class="card__title">«Сейчас я здесь»</h2>
         <div class="img__wrapper">
           <span class="img__label">JS я иду!</span>
@@ -536,7 +536,7 @@
             />
           </picture>
         </div>
-        <figcaption class="card__text_block">
+        <div class="card__text_block">
           <p class="card__text">
             Сейчас вы уже очень много знаете о вёрстке. Но это только начало.
             Во-первых, впереди ещё много материала про «красотищу». Во-вторых, с
@@ -550,7 +550,7 @@
             На этом шаге понимаешь, что верстка заканчивается и впереди еще
             больше нового.
           </p>
-        </figcaption>
+        </div>
         <div class="button__container">
           <button class="button button__heart card__icon-button" type="button">
             <svg
@@ -595,7 +595,7 @@
             <span class="button__text"> Like </span>
           </button>
         </div>
-      </figure>
+      </article>
       <button
         class="button button__save"
         type="button"
