--- a/index.html
+++ b/index.html
@@ -609,14 +609,14 @@
           Сохранить на память
         </span>
       </button>
-      <dialog id="dialog-id" class="dialog" method="dialog">
+      <dialog id="dialog-id" class="dialog">
         <div class="dialog__text button__text">
           <svg class="floppy dialog__floppy" viewBox="0 0 39 39">
             <use href="./svg/floppy.svg#floppy"></use>
           </svg>
           <h3 class="dialog__title">Вставьте дискету, чтобы продолжить</h3>
         </div>
-        <form>
+        <form method="dialog">
           <button class="button dialog__button" type="submit">
             <span class="button__text">ok</span>
           </button>
